<resources>
    <string name="app_name">Demo Wikipedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LOG IN / JOIN WIKIPEDIA</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Wikipedia</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>
    <string name="menu_customize">Customize the feed</string>
    <string name="title_activity_login">Log in to Wikipedia</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_email">Username</string>
    <string name="search">Search Wikipedia</string>
    <string name="search_hint">Search Wikipedia</string>
    <string name="article_type">Feature article</string>
    <string name="article_source">From English Wikipedia</string>
    <string name="article_title">Spinophorosaurus</string>
    <string name="article_summary">Middle Jurassic senus of Sauropod dinosaur</string>
    <string name="article_content">Spinophorosaurus is a genus of sauropod dinosaur that lived in what is now Niger during the Middle Jurassic period. The first two specimens were excavated in the 2000s by German and Spanish teams under difficult conditions.</string>
    <string name="save_button">SAVE</string>
    <string name="hide_card">Hide this article</string>
    <string name="hide_this_type_card">Hide all article of this type</string>
    <string name="customize">Customize Explore feed</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_registration">Create an account</string>
    <string name="donething1">Sync your reading lists</string>
    <string name="donething2">Keep track of your contributions</string>
    <string name="donething3">Save your preferences</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">LOG IN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_email">Email (Optional)</string>
    <string name="email_recommend">Recommended since email is needed for account recovery.</string>
    <string name="next">NEXT</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="invalid_name1">The user name \"</string>
    <string name="invalid_name2">\" is not available. Please choose a different name.</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_reg_password">The password is invalid</string>
    <string name="invalid_repeat_password">Passwords don\'t match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_customize">Customize the feed</string>
    <string name="Contributor">Contributor\n</string>
    <string name="ContributorContent">
        "Le Nhu Chu Hiep, Pham Thi Ngoc Mai, Doan Lien Huong, Vu Khanh Huyen, Pham Phan Bach."
    </string>
    <string name="TranslatorContent">
        "This app was translated by the volunteer translators at translatewiki.net."
    </string>
    <string name="LibrariesContent">
        "ButterKnife (license), ChromeLikeTabSwitcher (license), Commons Lang (license), Fresco (license), HockeySDK-Android (license), jsoup (license), Mapbox Android SDK (license), OkHttp (license), Otto (license), PageIndicatorView (license), Retrofit (license), RtlViewPager (license), TapTargetView (license)"
    </string>
    <string name="LicenseContent">
        "Source code available on Gerrit and GitHub under the Apache 2.0 License. Unless otherwise specified, content is available under a Creative Commons Attribution-ShareAlike License."
    </string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="ReadingListSync">Reading list syncing</string>
    <string name="ReadingListSyncPreference">Sync reading lists across different devices by saving them to your Wikipedia account</string>
    <string name="ShowImage">Show images</string>
    <string name="ShowImagePreference">Enable or disable loading of images in pages. Uncheck this setting if your Internet connection is slow, or if your data plan is limited.</string>
    <string name="PreferOfflineContent">Prefer offline content</string>
    <string name="PreferOfflineContentPreference">Save data usage by loading articles that are available offline rather than always loading the latest version of an article</string>
    <string name="SendCrashReport">Send crash reports</string>
    <string name="SendCrashReportPreference">Allow the app to send crash reports to us</string>
    <string name="hint_search">Search Wikipedia</string>
    <string name="in_the_news">In the news</string>
    <string name="on_this_day">On this day</string>
    <string name="trending">Trending</string>
    <string name="today_on_wiki">Today on Wikipedia</string>
    <string name="randomizer">Randomizer</string>
    <string name="featured_article">Featured article</string>
    <string name="picture_of_the_day">Picture of the day</string>
    <string name="because_you_read">Because you read</string>
    <string name="suggested_edits">Suggested edits</string>
    <string name="action_show_all">Show all</string>
    <string name="action_hide_all">Hide all</string>
    <string name="action_restore_default_view">Restore default view</string>
    <string name="sample_header">Impeachment of Donald Trump</string>
    <string name="sample_art_sub_header">2019 United States presidential impeachment</string>
    <string name="sample_content_article_detail">The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.The impeachment of Donald trump, the 45th president of the United States, occurred on December 18, 2019, when the House of Representatives approved articles of impeachment on charges of abuse of power and obstruction of Congress. The president\'s impeachment came after a formal House imquiry found that he had solicited foreign interference in the 2020 U.S presidential election to help his re-election bid, and thhen obstructed the inquir itself by telling his administration officials to ignore subpoenas for documents and testimony.</string>
</resources>