<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        
        <item
            android:id="@+id/nav_customize"
            android:icon="@drawable/ic_customize"
            android:title="@string/menu_customize"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
