<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/featured_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:elevation="5dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.explore.ArticleFragment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:orientation="vertical"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/article_type"
                    android:textColor="@color/colorTextBlack"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_source"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="12sp" />

<!--                <Space-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="10dp" />-->

            </LinearLayout>

            <Button
                android:id="@+id/article_option"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="2dp"
                android:background="?android:attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_article_option" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"

                android:src="@drawable/dinasour" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/article_title"
                android:textColor="@color/colorTextBlack"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp" />

<!--            <Space-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content" />-->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:text="@string/article_summary"
                android:textColor="@color/colorTextGrey"
                android:textSize="12sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:maxLines="4"
                android:ellipsize="end"
                android:text="@string/article_content"
                android:textColor="@color/colorTextBlack"
                android:textSize="12sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_save"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableStart="@drawable/ic_save_article"
                    android:text="@string/save_button"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_alignParentStart="true"/>
                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:drawableEnd="@drawable/ic_share"
                    android:background="@android:color/transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:gravity="center_vertical"/>
            </RelativeLayout>



        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>