<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">
        <TextView
            android:id="@+id/article_detail_header"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:text="@string/sample_header"
            android:lineSpacingExtra="1dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"/>
        <ImageButton
            android:id="@+id/lock_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_lock"
            android:scaleType="center"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/article_detail_header"/>

        <TextView
            android:id="@+id/article_detail_sub_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/article_detail_header"
            android:layout_alignParentStart="true"
            android:layout_below="@id/article_detail_header"
            android:text="@string/sample_art_sub_header"
            android:textSize="14sp"
            android:textColor="@color/colorTextGrey"/>
        <View
            android:id="@+id/divider"
            android:layout_marginTop="18dp"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_below="@id/article_detail_sub_header"
            android:layout_alignParentStart="true"
            android:background="@color/colorTextGrey"/>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/article_detail_info"
            android:layout_below="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:text="@string/sample_content_article_detail"

            />

</RelativeLayout>

</androidx.core.widget.NestedScrollView>